[tool.poetry]
name = "async-requester"
version = "0.1.0"
description = ""
authors = ["luceroquispe <Lucero.Quispe@proton.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.0"
httpx = "^0.25.2"
loguru = "^0.7.2"
trio = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
pytest = "^7.4.3"
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
