[tool.poetry]
name = "async-requester"
version = "0.1.0"
description = ""
authors = ["ryukyi <ryukyi@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.0"
httpx = "^0.25.2"
loguru = "^0.7.2"
trio = "^0.23.2"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
pytest = "^7.4.3"
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.3.1"
python-lsp-ruff = "^2.2.0"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
