[tool.poetry]
name = "async-requester"
version = "0.1.0"
description = "batteries included async client using httpx and trio async runtime"
authors = ["ryukyi <ryukyi@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.3"
httpx = "^0.27.0"
trio = "^0.24.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
ruff = "^0.3.1"
python-lsp-ruff = "^2.2.0"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
pytest = "^8.0.2"
pytest-trio = "^0.8.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
